# zchannel

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  configure.ac  tags
channel/: .gitignore  Makefile  Makefile.am  Makefile.in  benchmark_channel.txt  channel.cpp  channel.h  channel_update.txt  channel_update_1.txt  channel_update_2.txt  channel_update_3.txt  channel_update_4.txt  msgsender.cpp  schnorr  schnorr.cpp  schnorr.h  test.cpp
channel/schnorr/: bench.cpp  digest.cpp  digest.h  dkg.cpp  dkg.h  dkg.tcc  schnorr.cpp  schnorr.h  schnorr.tcc  test.cpp
demo/: Makefile.am  Makefile.in  main.cpp
libsnark/: Makefile
libsnark/src/algebra/curves/alt_bn128/: alt_bn128_g1.hpp
libsnark/src/algebra/evaluation_domain/: evaluation_domain.tcc
libsnark/src/algebra/fields/tests/: test_bigint
libsnark/src/common/: utils.hpp
libsnark/src/gadgetlib1/: gadget.tcc  pb_variable.tcc  protoboard.tcc
libsnark/src/gadgetlib1/gadgets/: basic_gadgets.tcc  gadget_from_r1cs.tcc
libsnark/src/gadgetlib1/gadgets/hashes/sha256/: sha256_gadget.tcc
libsnark/src/relations/constraint_satisfaction_problems/r1cs/: r1cs.hpp  r1cs.tcc
simulator/: DAP.txt  Makefile  Makefile.am  Makefile.in  alpha10.txt  alpha50.txt  alpha90.txt  simulator.cpp  simulator.h  test  test.cpp
zcash/: .gitignore  CreateJoinSplit.cpp  GenerateParams.cpp  IncrementalMerkleTree.cpp  JoinSplit.cpp  JoinSplit.hpp  Makefile.am  Makefile.in  Note.cpp  Note.hpp  Proof.cpp  TestCircuit.cpp  Zcash.h  compat.h  correct_input_note_compute.txt  error_info.txt  error_info_2.txt  generate_exp.txt  keystore.cpp  original_gen_exp.txt  original_prover_exp.txt  prove_exp.txt  random.h  run.sh  sample_output.txt  sync.cpp  uint256.h  util.cpp  utiltime.cpp  zcashutil.cpp  zcashutil.h
zcash/circuit/: commitment.tcc  gadget.tcc  merkle.tcc  note.tcc  prfs.tcc
zcash/compat/: endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
zcash/crypto/: common.h  equihash.cpp
zcash/primitives/: block.cpp  transaction.cpp  transaction.h
zcash/script/: sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h  zcashconsensus.cpp  zcashconsensus.h
zcash/support/: pagelocker.cpp
